[project]
name = "mountory-core"
version = "0.3.2"
description = "Core backend functionality of the mountory package."
readme = "README.md"
authors = [
    { name = "saltie2193", email = "saltie@protonmail.com" }
]
requires-python = ">=3.12, <3.14"
dependencies = [
    "psycopg[binary]>=3.2.3,<4.0.0",
    "pwdlib[argon2,bcrypt]>=0.3.0,<1.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "pydantic[email]>=2.10.4,<2.12.0",
    "pyjwt>=2.10.1,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.36,<3.0.0",
    "sqlmodel>=0.0.22,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest<10.0.0,>=9.0.2",
    "mypy<2.0.0,>=1.19.1",
    "ruff<1.0.0,>=0.14.10",
    "coverage<8.0.0,>=7.13.0",
    "ty>=0.0.7",
    "anyio>=4.12.0",
    "pytest-cov>=7.0.0",
    "prek>=0.2.25",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.ty.analysis]
# Disable support for `type: ignore` comments
respect-type-ignore-comments = false

[tool.pytest]
addopts = ["--import-mode=importlib"]

[project.entry-points.pytest11]
mountory_core = "mountory_core.pytest_plugin"

[tool.mypy]
strict = true
enable_error_code = [
    "ignore-without-code"
]
warn_unused_ignores = true
exclude = [".venv"]
